# pcmsolver_v2

./: .editorconfig  .gitignore  .license-header  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Pipfile  configure.py
cmake/: autocmake.yml
cmake/custom/: pcmsolver.cmake
cmake/custom/compilers/: CFlags.cmake  CXXFlags.cmake  GNU.CXX.cmake
doc/programmers/: timer-class.rst
doc/users/: building.rst
include/: CMakeLists.txt
src/: CMakeLists.txt  PCMSolverConfig.cmake.in
src/api/: CMakeLists.txt
src/bi_operators/: BIOperatorData.hpp  BoundaryIntegralOperator.hpp  CMakeLists.txt  Collocation.cpp  Collocation.hpp  IBoundaryIntegralOperator.cpp  IBoundaryIntegralOperator.hpp  Numerical.cpp  Numerical.hpp  Purisima.cpp  Purisima.hpp
src/cavity/: CMakeLists.txt  Cavity.hpp  CavityData.hpp  Element.cpp  Element.hpp  GePolCavity.cpp  GePolCavity.hpp  ICavity.cpp  ICavity.hpp  RestartCavity.cpp  RestartCavity.hpp  TsLessCavity.cpp  TsLessCavity.hpp
src/green/: AnisotropicLiquid.cpp  AnisotropicLiquid.hpp  CMakeLists.txt  DerivativeTypes.hpp  Green.hpp  GreenData.hpp  GreenUtils.hpp  GreensFunction.hpp  IGreensFunction.hpp  InterfacesImpl.hpp  IonicLiquid.cpp  IonicLiquid.hpp  SphericalDiffuse.cpp  SphericalDiffuse.hpp  SphericalSharp.cpp  SphericalSharp.hpp  UniformDielectric.cpp  UniformDielectric.hpp  Vacuum.cpp  Vacuum.hpp
src/green/dielectric_profile/: Anisotropic.hpp  CMakeLists.txt  MembraneTanh.hpp  Metal.hpp  OneLayerErf.hpp  OneLayerLog.hpp  OneLayerTanh.hpp  Sharp.hpp  Uniform.hpp  Yukawa.hpp
src/include/: Config.hpp  Config.hpp.in
src/interface/: CMakeLists.txt  Input.cpp  Input.hpp  Meddle.cpp  Meddle.hpp  VersionInfo.hpp
src/metal/: CMakeLists.txt
src/pedra/: CMakeLists.txt  pedra_cavity_interface.F90
src/solver/: CMakeLists.txt  CPCMSolver.cpp  CPCMSolver.hpp  IEFSolver.cpp  IEFSolver.hpp  ISolver.hpp  Solver.hpp  SolverData.hpp  SolverImpl.cpp  SolverImpl.hpp
src/tools/: CMakeLists.txt  go_pcm.py.in  pcmparser.py  plot_cavity.py  pyparsing.py  versioner.py
src/tsless/: CMakeLists.txt
src/utils/: Atom.cpp  Atom.hpp  CMakeLists.txt  ChargeDistribution.cpp  ChargeDistribution.hpp  Factory.hpp  MathUtils.hpp  Molecule.cpp  Molecule.hpp  QuadratureRules.cpp  QuadratureRules.hpp  RungeKutta.hpp  Solvent.cpp  Solvent.hpp  Sphere.cpp  Sphere.hpp  SplineFunction.hpp  Stencils.hpp  Symmetry.cpp  Symmetry.hpp  Timer.hpp
src/utils/getkw/: CMakeLists.txt  Getkw.cpp  Getkw.h  GetkwError.cpp  Section.cpp  Section.h  messages.h
tests/: CMakeLists.txt  TestingMolecules.hpp  unit_tests.cpp
tests/C_host/: CMakeLists.txt  C_host-functions.h  C_host.c  fail-C_host.c
tests/Fortran_host/: CMakeLists.txt
tests/bi_operators/: CMakeLists.txt  bi_operators_collocation.cpp  update_reference_files.cpp
tests/cpcm/: CMakeLists.txt  cpcm_tsless-NH3.cpp  cpcm_tsless-point.cpp
tests/dielectric_profile/: one_layer.cpp
tests/gepol/: CMakeLists.txt  gepol_NH3.cpp
tests/green/: AnalyticEvaluate.hpp  CMakeLists.txt
tests/iefpcm/: CMakeLists.txt  iefpcm_tsless-NH3.cpp  iefpcm_tsless-point.cpp
tests/input/: CMakeLists.txt  input_cpcm.cpp  input_diffuse.cpp  input_multipoles.cpp  input_restart.cpp  input_sharp.cpp
tests/numerical_quadrature/: numerical_quadrature.cpp
tests/standalone/: CMakeLists.txt
tests/tsless/: CMakeLists.txt
