cmake_minimum_required(VERSION 3.9 FATAL_ERROR)

project(PCMSolver LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(STAGED_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/stage)
message(STATUS "PCMSolver staging: ${STAGED_INSTALL_PREFIX}")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/upstream)

include(ExternalProject)
ExternalProject_Add(PCMSolver
  DEPENDS
    Eigen3_external
    taylor_external
  SOURCE_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}/src
  CMAKE_ARGS
    -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}
    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
    -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
    -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
    -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
    -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}
    -DCMAKE_CXX_STANDARD_REQUIRED=ON
    -DCMAKE_CXX_EXTENSIONS=OFF
    -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
    -DENABLE_OPENMP=${ENABLE_OPENMP}
    -DEigen3_DIR=${Eigen3_DIR}
    -Dtaylor_DIR=${taylor_DIR}
    -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
  BUILD_ALWAYS 1
  )
