install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/pcmsolver.h
  DESTINATION
    ${INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/PCMInput.h
  DESTINATION
    ${INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
install(
  FILES
    ${PROJECT_SOURCE_DIR}/api/pcmsolver.f90
  DESTINATION
    ${INSTALL_INCLUDEDIR}/${PROJECT_NAME}
  )
